welcome.lessons.welcome.methods.picture.MethodsPicture.scala.error
MethodsPicture:28: error: identifier expected but ')' found.
					faireW(c:)
                                                 ^MethodsPicture:32: error: ')' expected but '}' found.
					} 
                                        ^